# SLAM_Code_Learning

./: .gitignore  README.md
Apollo-dataset-api/: .gitignore
Apollo-dataset-api/car_instance/: car_models.py  dataloader.py  demo.ipynb  install.sh  objloader.py  render_car_instances.py  test.py
Apollo-dataset-api/car_instance/renderer/: render_egl.cpp  setup.py
Apollo-dataset-api/car_instance/utils/: data_find.py  utils.py
Apollo-dataset-api/scene_parsing/: camera_intrinsics.txt  labels_apollo.py
Apollo-dataset-api/scene_parsing/public_image_lists/: road01_ins_test.lst  road01_ins_train.lst  road01_ins_val.lst  road02_ins_test.lst  road02_ins_train.lst  road02_ins_val.lst  road03_ins_test.lst  road03_ins_train.lst  road03_ins_val.lst
Apollo-dataset-api/utils/: data.py  utils.py
Co-SLAM/: .gitignore  coslam.py  utils.py
Co-SLAM/configs/Tum/: tum.yaml
Co-SLAM/datasets/: dataset.py
Co-SLAM/model/: decoder.py  encodings.py  keyframe.py  scene_rep.py
Co-SLAM/optimization/: utils.py
DytanVO/: .gitignore  DytanVO.py  env.txt  environment.yml  vo_trajectory_from_folder.py
DytanVO/Datasets/: tartanTrajFlowDataset.py  utils.py
DytanVO/Network/: VONet.py
DytanVO/Network/rigidmask/: VCNplus.py  submodule.py
DytanVO/evaluator/: evaluator_base.py
DytanVO/results/: kitti_vonet_image_2.txt
ORB_SLAM2/: .gitignore  CMakeLists.txt
ORB_SLAM2/Examples/Monocular/: mono_tum.cc
ORB_SLAM2/Examples/RGB-D/: rgbd_tum.cc
ORB_SLAM2/include/: FrameDrawer.h  LoopClosing.h  ORBextractor.h  PnPsolver.h  System.h
ORB_SLAM2/src/: ORBextractor.cc  Sim3Solver.cc  System.cc  Tracking.cc
lietorch/: .gitignore  test.py
lietorch/examples/pgo/: main.py
lietorch/examples/pgo/g2o_files/: torus3D_rotavg.g2o
lsd_ws/src/lsd_slam/: .gitignore  README.md
lsd_ws/src/lsd_slam/lsd_slam/: CMakeLists.txt
lsd_ws/src/lsd_slam/lsd_slam_core/: CMakeLists.txt
lsd_ws/src/lsd_slam/lsd_slam_core/cmake/: FindG2O.cmake
lsd_ws/src/lsd_slam/lsd_slam_core/launch/: test.launch
lsd_ws/src/lsd_slam/lsd_slam_core/src/: LiveSLAMWrapper.cpp  LiveSLAMWrapper.h  SlamSystem.cpp  SlamSystem.h  main_live_odometry.cpp  main_on_images.cpp
lsd_ws/src/lsd_slam/lsd_slam_core/src/DataStructures/: Frame.cpp  Frame.h  FrameMemory.cpp  FrameMemory.h  FramePoseStruct.cpp  FramePoseStruct.h
lsd_ws/src/lsd_slam/lsd_slam_core/src/DepthEstimation/: DepthMap.cpp  DepthMap.h  DepthMapPixelHypothesis.cpp  DepthMapPixelHypothesis.h
lsd_ws/src/lsd_slam/lsd_slam_core/src/GlobalMapping/: FabMap.cpp  FabMap.h  KeyFrameGraph.cpp  KeyFrameGraph.h  TrackableKeyFrameSearch.cpp  TrackableKeyFrameSearch.h  g2oTypeSim3Sophus.cpp  g2oTypeSim3Sophus.h
lsd_ws/src/lsd_slam/lsd_slam_core/src/IOWrapper/: ImageDisplay.h  InputImageStream.h  NotifyBuffer.h  Output3DWrapper.h  Timestamp.cpp  Timestamp.h  TimestampedObject.h
lsd_ws/src/lsd_slam/lsd_slam_core/src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
lsd_ws/src/lsd_slam/lsd_slam_core/src/IOWrapper/ROS/: ROSImageStreamThread.cpp  ROSImageStreamThread.h  ROSOutput3DWrapper.cpp  ROSOutput3DWrapper.h  rosReconfigure.h
lsd_ws/src/lsd_slam/lsd_slam_core/src/Tracking/: Relocalizer.cpp  Relocalizer.h  SE3Tracker.cpp  SE3Tracker.h  Sim3Tracker.cpp  Sim3Tracker.h  TrackingReference.cpp  TrackingReference.h  least_squares.cpp  least_squares.h
lsd_ws/src/lsd_slam/lsd_slam_core/src/util/: EigenCoreInclude.h  IndexThreadReduce.h  SophusUtil.cpp  SophusUtil.h  Undistorter.cpp  Undistorter.h  globalFuncs.cpp  globalFuncs.h  settings.cpp  settings.h
lsd_ws/src/lsd_slam/lsd_slam_viewer/: CMakeLists.txt
lsd_ws/src/lsd_slam/lsd_slam_viewer/cmake/: FindQGLViewer.cmake
lsd_ws/src/lsd_slam/lsd_slam_viewer/launch/: viewer.launch
lsd_ws/src/lsd_slam/lsd_slam_viewer/src/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  KeyFrameGraphDisplay.cpp  KeyFrameGraphDisplay.h  PointCloudViewer.cpp  PointCloudViewer.h  main_stitchVideos.cpp  main_viewer.cpp  settings.cpp  settings.h
nerf-pytorch/: .gitignore  README.md  downsamples.py  load_llff.py  run_nerf.py  run_nerf_helpers.py
nerf-pytorch/configs/: drone.txt
nerfstudio/: .gitignore  pyproject.toml
nerfstudio/nerfstudio/cameras/: camera_optimizers.py  camera_utils.py  cameras.py  rays.py
nerfstudio/nerfstudio/configs/: base_config.py  experiment_config.py  external_methods.py  method_configs.py
nerfstudio/nerfstudio/data/: pixel_samplers.py
nerfstudio/nerfstudio/data/datamanagers/: base_datamanager.py  parallel_datamanager.py
nerfstudio/nerfstudio/data/dataparsers/: base_dataparser.py  nerfstudio_dataparser.py  sdfstudio_dataparser.py
nerfstudio/nerfstudio/data/utils/: dataloaders.py
nerfstudio/nerfstudio/engine/: callbacks.py  optimizers.py  trainer.py
nerfstudio/nerfstudio/field_components/: embedding.py
nerfstudio/nerfstudio/fields/: sdf_field.py
nerfstudio/nerfstudio/model_components/: ray_samplers.py  scene_colliders.py
nerfstudio/nerfstudio/models/: base_model.py  base_surface_model.py  nerfacto.py  neus.py  neus_facto.py  vanilla_nerf.py
nerfstudio/nerfstudio/pipelines/: base_pipeline.py
nerfstudio/nerfstudio/scripts/: train.py
outputs/poster/nerfacto/2024-01-17_155808/: config.yml
outputs/poster/nerfacto/2024-01-17_170843/: config.yml
outputs/poster/nerfacto/2024-01-18_154541/: config.yml
outputs/poster/nerfacto/2024-01-18_160904/: config.yml  dataparser_transforms.json
outputs/poster/nerfacto/2024-01-18_202940/: config.yml
theseus/examples/: bundle_adjustment.py
theseus/examples/pose_graph/: pose_graph_benchmark.py  pose_graph_nocuda.py
theseus/theseus/core/: cost_weight.py
theseus/theseus/utils/examples/pose_graph/: dataset.py
theseus/tutorials/: 00_introduction.ipynb  01_least_squares_optimization.ipynb  02_differentiating_theseus_layer.ipynb  04_motion_planning.ipynb
